--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,74 @@
-/* Write your CSS here! */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+
+
+}
+
+html {
+
+    font-size:20px 
+}
+
+body {
+    background: url('./images/background.jpg');
+    background-position: 0 1000px;
+    font-family: 'Roboto', sans-serif; 
+}
+
+.container{
+    max-width:1100px;
+    margin:0 auto;
+    padding:0 3rem;
+    margin-top: 4rem;
+    text-align: center;
+
+}
+
+h1 {
+    color: #03000f;
+    font-size: 5rem;
+    font-weight: 800;
+    letter-spacing:8px;
+    margin-bottom:2rem;
+
+}
+
+
+h2{
+    color:rgb(240, 243, 255);
+    font-size:4rem;
+    font-weight:400;
+
+}
+
+.image {
+    margin-top:10rem;
+    margin-bottom: 5rem;
+
+}
+
+ p { font-size: 2rem;
+    color: #0f0000;
+    line-height: 5rem;
+    margin-bottom: 5rem;
+    
+
+ }
+
+ .btn {
+    display: inline-block;
+    padding: 2.7rem  7.5rem;
+    background-color: aqua;
+    font-size: 2rem;
+    text-decoration: none;
+    color: #03000f;
+    border-radius: 10px
+   
+
+
+ }
+ 
